bat.bool1.makes10.Makes10.scala.error
Compilation error:
Makes10:2: error: Missing closing brace `}' assumed here
def makes10(a:Int, b:Int): Boolean = {
^Makes10:2: error: expected class or object definition
def makes10(a:Int, b:Int): Boolean = {
^